	* Incremented the glassplayer version to 0.6.4.
2016-02-17 Fred Gleason <fredg@paravelsystems.com>
	* Added glassformatter(1) in 'src/glassformatter/'.
	* Added a 'Stream Statistics' page.
2016-02-17 Fred Gleason <fredg@paravelsystems.com>
	* Added a stream metadata section to the 'Player' page.
2016-02-18 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the glassplayer version to 0.6.5.
2016-02-18 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'NEWS'.
	* Incremented the package version to 0.6.2.
2016-02-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'glassplayerhost-fastembed.spec.in' that caused
	'player.js' and 'stats.js' to be installed without being minimized.
2016-02-18 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.3.
2016-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Refactored glassplayerhost(1) to use the integrated Webhost
	HTTP server.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'src/cgi-src/systemcontrol.cpp' to use the 'AddUser2'
	command for setting passwords.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'conf/glassplayerhost-site.conf.in'.
	* Removed the 'httpd' depenency from
	'glassplayerhost-fastembed.spec.in'.
	* Incremented the webhost version to 0.8.9.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Removed the httpd service restart from
	'glassplayerhost-fastembed.spec.in'.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.4.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'INSTALL' to reflect removal of httpd dependency.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Removed systemctl(8) commands from the %post script in
	'glassplayerhost-fastembed.spec.in'.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.5.
2016-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Refactored Metadata updates to use WebSocket connections.